recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels0
  if(levels0){
     ^Sierpinski:3: error: not found: value levels
    var nL = levels-1		// newLevel
             ^